@startuml

title __GUI's Class Diagram__\n

  namespace es.ull.patrones {
    namespace es.ull.patrones.gui {
      class es.ull.patrones.gui.InformationFrame {
          ~ downLeft : JPanel
          ~ downRight : JPanel
          ~ firstPanel : JPanel
          ~ topLeft : JPanel
          ~ topRight : JPanel
          + InformationFrame()
          + setFirstPanel()
          + setInformationInPanel()
          + setLabel()
          + setLabelImage()
          + setSmallPanel()
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.gui {
      class es.ull.patrones.gui.MainFrame {
          ~ blueButton : JButton
          ~ blueMonster : JLabel
          ~ firstPanel : JPanel
          ~ greenButton : JButton
          ~ greenMonster : JLabel
          ~ leftIcon : JLabel
          ~ leftPanel : JPanel
          ~ listOfClonesBlue : ArrayList<Monster>
          ~ listOfClonesGreen : ArrayList<Monster>
          ~ listOfClonesOrange : ArrayList<Monster>
          ~ listOfClonesPurple : ArrayList<Monster>
          ~ name : JLabel
          ~ orangeButton : JButton
          ~ orangeMonster : JLabel
          ~ purpleButton : JButton
          ~ purpleMonster : JLabel
          ~ seeClones : JButton
          ~ textTop : JLabel
          ~ topPanel : JPanel
          + MainFrame()
          + setButton()
          + setFirstPanel()
          + setLabel()
          + setLabelLeftIcon()
          + setLabelsImage()
          + setLeftPanel()
          + setTopPanel()
      }
    }
  }
  

  es.ull.patrones.gui.InformationFrame -up-|> javax.swing.JFrame
  es.ull.patrones.gui.MainFrame -up-|> javax.swing.JFrame
  es.ull.patrones.gui.MainFrame o-- es.ull.patrones.prototype.manager.ManagerMonster : man


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
